# imgvid-compress

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  features.md  key-apis.md  options.md
src/: __init__.py  main.py
src/analysis/: folder_analyzer.py  folder_stats.py
src/converters/: file_copier.py  image_converter.py  video_converter.py
src/core/: logger_config.py  progress_tracker.py
src/orchestrator/: converter_orchestrator.py
src/processors/: base_processor.py  copy_processor.py  image_processor.py  video_processor.py
src/scan/: file_scanner.py
src/utils/: path_utils.py  size_formatter.py
src/validators/: base_validator.py  copy_validator.py  image_validator.py  video_validator.py
tests/: test_main.py  test_version.py
tests/analysis/: test_folder_analysis.py
tests/converters/: test_converters.py
tests/core/: test_logger_config.py  test_progress_tracker.py
tests/orchestrator/: test_orchestrator.py
tests/processors/: test_processors.py
tests/scan/: test_file_scanner.py
tests/utils/: test_utils.py
tests/validators/: test_validators.py
