[project]
name = "imgvid-compress"
version = "0.1.0"
description = "Convert images to AVIF format with folder structure preservation"
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.0.0",
    "pillow-avif-plugin>=1.4.0",
    "pillow-heif>=0.13.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.0.1",
    "radon>=6.0.1",
    "ruff>=0.8.0",
    "xenon>=0.9.3",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C90",
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 20
